--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
     </header>
 
     <section id="home" class="hero">
-        <h1>Your Name</h1>
+        <h1>Gerro Orbiso</h1>
         <p>Web Developer & Designer</p>
         <a href="#portfolio" class="cta-button">View My Work</a>
     </section>
 
     <section id="about" class="about">
         <h2>About Me</h2>
-        <p>Your bio goes here. Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
+        <p>computer scientist student</p>
     </section>
 
     <section id="portfolio" class="portfolio">
         <h2>Portfolio</h2>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 1">
-            <h3>Project 1</h3>
-            <p>Description of Project 1...</p>
+            <h3>Basic calculator</h3>
+            <p>making basic calculator</p>
         </div>
         <div class="portfolio-item">
             <img src="img/img1.jpg" alt="Project 2">
-            <h3>Project 2</h3>
-            <p>Description of Project 2...</p>
+            <h3>HTML menu</h3>
+            <p>making a menu like mang inasal in html</p>
         </div>
         <!-- Add more portfolio items as needed -->
     </section>
